[package]
authors = [
    "The Cortex-R Team <cortex-r@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Debug Communication Channel (DCC) API"
edition = "2018"
keywords = ["ARM", "DCC"]
license = "MIT OR Apache-2.0"
name = "arm-dcc"
repository = "https://github.com/rust-embedded/arm-dcc"
rust-version = "1.59"
version = "0.1.0"

[features]
nop = []
