[package]
authors = [
    "The Cortex-R Team <cortex-r@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Report panic messages to the host using the Debug Communication Channel (DCC)"
edition = "2018"
keywords = ["ARM", "DCC", "panic-handler"]
license = "MIT OR Apache-2.0"
name = "panic-dcc"
readme = "README.md"
repository = "https://github.com/rust-embedded/arm-dcc"
rust-version = "1.59"
version = "0.1.0"

[dependencies]
arm-dcc = { path = "../arm-dcc", version = "0.1.0" }
